--- a/_data/data.yml
+++ b/_data/data.yml
@@ -16,10 +16,10 @@ sidebar:
     birthday: 17.06.1995 in Karlsruhe
     email: lpuettner@mail.de
     phone: +49 162 4274495
-    citizenship: deutsch
+    citizenship: German
     address: Bäckerstr. 22
-            <div style="text-indent:25px;">81241 München</div>
-            <div style="text-indent:25px;">Bayern, DE</div>
+            <div style="text-indent:25px;">81241 Munich</div>
+            <div style="text-indent:25px;">Bavaria, DE</div>
     #website: blog.webjeda.com #do not add http://
     #linkedin: alandoe
     #xing: alandoe
@@ -34,118 +34,122 @@ sidebar:
     #pdf: /print
 
     languages:
-      title: Sprachen
+      title: Languages
       info:
-        - idiom: Deutsch
-          level: Muttersprache
+        - idiom: German
+          level: Native
 
-        - idiom: Englich
-          level: Verhandlungssicher
+        - idiom: English
+          level: Professional
         
-        - idiom: Altgriechisch
+        - idiom: Ancient Greek
           level: Graecum
 
-        - idiom: Latein
+        - idiom: Latin
           level: Latinum
 
     interests:
-      title: Interessen
+      title: Interests
       info:
-        - item: Wandern
+        - item: Hiking
           link:
 
-        - item: Mountainbiken
+        - item: Mountainbiking
           link:
 
         - item: Home Barista
           link:
 
 education:
-    title: Ausbildung
+    title: Education
     info:
-      - degree: MSc in Elektro- und Informationstechnik
-        university: Technische Universität München
+      - degree: MSc in Electrical Engineering and Information Technology
+        university: Technical University of Munich
         time: 04/2017 - 06/2020
         details: |
-          - Schwerpunkt Automatisierung & Robotik
-          - Abschlussnote: 1,2
-          - Masterarbeit am Lehrstuhl für Medientechnik<br>
+          - Focus on Automation & Robotics
+          - Final Grade: 1.2
+          - Master Thesis at the Chair of Media Technology<br>
             "Driver Awareness Detection with Eye-Tracking Glasses and the CARLA Simulator"<br>
-            Note: 1,0
-            - Entwicklung eines Algorithmus und einer Metrik zur Einschätzung der Fahrerwahrnehmung
-            - Implementierung eines Prototypen in einer ROS Umgebung unter Verwendung einer Eye-Tracking Brille und des CARLA Simulators
+            Grade: 1.0
+            - Development of an algorithm and a metric to assess the drivers awareness
+            - Implementation of a prototype using eye-tracking glasses and the CARLA simulator in a ROS environment
             - Tools: ROS, Python, ZMQ
 
-          <div style="text-indent:25px;">Ausgewählte Projekte</div>
-          - Leistungskurs C++
-            - Programmierung eines Turtlebots, um ein hockeyähnliches Spiel in einem Turnier zu spielen
-            - Lokalisierung des Roboters auf dem Spielfeld mit einer Kinect-Kamera und LIDAR Sensor
-            - Pfadplanung
+          <div style="text-indent:25px;">Selected Projects</div>
+          - Advanced Programming in C++
+            - Programming of a Turtlebot to play a hockey-like game in a tournament setting
+            - Localization of the robot in the playground using Kinect Camera and LIDAR
+            - Path planning
+            - Execution of actions to score by pushing the pucks into the goal
             - Tools: ROS, C++, OpenCV
           - Humanoid Cognitive Reasoning
-            - Erkennung und Schlussfolgern verschiedener räumlicher Zusammenhänge zwischen Objekten mittels der Kamera
+            - Detection and inference of different spatial relations between objects using the robots camera
             - Tools: ROS, C++, OpenCV, Prolog
 
-      - degree: Auslandssemester
-        university: Linköpings Universitet, Schweden
+      - degree: Exchange Studies
+        university: Linköpings University, Sweden
         time: 08/2017 - 01/2018
         details: |
-          Kurse im Bereich Bild- und Signalverarbeitung
-      - degree: BSc in Elektro- und Informationstechnik
-        university: Technische Universität München
+          Courses on Image and Signal Processing
+      - degree: BSc in Electrical Engineering and Information Technology
+        university: Technical University of Munich
         time: 10/2013 - 03/2017
         details: |
-          - Abschlussnote: 1,8
-          - Bachelorarbeit am Lehrstuhl für Medientechnik<br>
-          "Positionierung eines low-cost Roboterarm mittels 2.5D Visual Servoing"<br>
-          Note: 1,0
-            - Verwendung eines Open-Source Roboterarm bestehend aus Dynamixel Servomotoren
-            - Entwurf einer 3D-gedruckten Kamerahaltung
-            - Implementierung eines Algorithmus zur Positionierung des Endeffektors relativ zu einem Objekt mittels Visual Servoing
-            - Tools: ROS, C++, Inria Visual Servoing Platform (VISP), Orocos KDL
+          - Final Grade: 1.8
+          - Bachelor Thesis at the Chair of Media Technology<br>
+          "Positioning of a low-cost robotic arm using 2.5D Visual Servoing"<br>
+          Grade: 1.0
+            - Usage of an open source robotic arm made out of dynamixel servomotors
+            - Design of a 3D-printed camera mount
+            - Implementation of a visual servoing algorithm to position the end effector of the robotic arm relative to an object
+            - Tools: ROS, C++, Inria Visual Servoing Platform, Orocos KDL
           
 
 experiences:
-    title: Berufserfahrung
+    title: Experiences
     info:
       - role: AI Engineer
-        time: 12/2021 - heute
-        company: CareX.ai Inc., Palo Alto, Kalifornien (remote)
+        time: 12/2021 - Present
+        company: CareX.ai Inc., Palo Alto, California (remote)
         details: |
-          - Implementierung und Management der Infrastruktur für KI-Entwicklung
-          - Entwicklung und Instandhaltung einer Python ETL Pipeline für unstrukturierte Daten
-          - Entwicklung eines Algorithmus zur Kalibrierung der Kamera für die Schätzung von Vitalparametern
-          - Implementierung von KI-Modell Prototypen zur Messung von Vitalparametern mit einer Kamera
+          - Implementation and management of infrastructure for AI development
+          - Setup and maintenance of Python ETL pipeline for unstructured data
+          - Development of a mobile camera calibration for vital sign measurements
+          - Prototyping AI models for vital sign measurements
 
-      - role: Wissenschaftlicher Mitarbeiter
+      - role: Research Assistant
         time: 04/2021 - 10/2021
-        company: Lehrstuhl für Medientechnik - Technische Universität München
+        company: Chair of Media Technology - Technical University of Munich
         details: |
-          Forschung an Digitalen Zwillingen im Bereich von 6G Netzwerken mithilfe von LIDAR Sensoren, Kameras und 6G Hochfrequenz Technologie
+          Research on Digital Twins in the 6G network setting using LIDAR sensors, cameras and 6G radio technology
 
       - company: Stercom Power Solutions GmbH, Weyarn
-        role: Embedded Softwareentwickler / Praktikant
+        role: Embedded Software Engineer / Intern
         time: 04/2019 - 03/2021
       
         details: |
-          07/2020 - 03/2021 Embedded Softwareentwickler<br>
-          04/2019 - 07/2020 Praktikant / Werkstudent<br>
-          - Embedded Softwareentwicklung für Energiespeichersysteme und Leistungselektronik
-          - Integration eines externen Softwarestacks für SAE J1939 Kommunikation in Stercom Systeme
-          - Integration eines externen Hardwaremoduls für Ladevorgänge mittels Powerline Communication gemäß DIN SPEC 70121 und ISO 15118
-          - Mithilfe bei der Entwicklung und des Entwurfes eines elektronischen Lawinenairbags
+          04/2019 - 07/2020 Student Intern / Working Student<br>
+          07/2020 - 03/2021 Embedded Software Engineer<br>
+          - Embedded software development for energy storage systems and power electronics
+          - Integration of an external software stack for SAE J1939 communication in Stercom systems
+          - Integration of an external module for battery charging using power line communication according to DIN SPEC 70121 and ISO 15118
+          - Participation in development and design of an electric avalanche airbag system
+          
+          
+          
 
       - company: ESG Elektroniksystem- und Logistik-GmbH, Fürstenfeldbruck
-        role: Praktikant / Werkstudent
+        role: Working Student / Student Intern
         time: 08/2015 - 08/2017
         
         details: |
-          - Entwicklung einer Software für die Extraktion von IP Daten von spezifischen Applikationen mithilfe der API eines komerziellen Produkts für Deep Packet Inspection
-          - Implementierung eines Lua Plugins für Wireshark zur Extraktion von anwendungsspezifischen Metadaten sowie zur Erkennung von Malware mittels YARA Regeln
-          - Evaluation von komerziellen Produkten für Deep Packet Inspection und Visualisierung von extrahierten Metadaten
+          - Development of a tool to extract IP data packets of specific applications using the API of a commercial product for deep packet inspection
+          - Implementation of LUA Wireshark plugins for extraction of application-specific metadata and malware detection using YARA rules
+          - Evaluation of commercial products for deep packet inspection and metadata visualization
 
 publications:
-    title: Publikation
+    title: Publication
     intro:
     papers:
       - title: Measuring Driver Situation Awareness Using Region-of-Interest Prediction and Eye Tracking
@@ -154,7 +158,7 @@ publications:
         conference: 2020 IEEE International Symposium on Multimedia · 30. Nov. 2020
 
 skills:
-    title: Fähigkeiten &amp; Kompetenzen
+    title: Skills &amp; Proficiency
 
     toolset:
       - name: Python
